[package]
name = "hadron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
rocket = { version = "=0.5.0-rc.3", features = ["json"] }
bytes = { version = "1", features = ["serde"] }
serde_json = "1.0.107"
regex = "1.10.2"
uuid = {version = "1.6.1", features = ["v4"]}

